Updating notebooks to use new project structure.

--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -37,7 +37,7 @@
    ],
    "source": [
     "# importing the file reader functionality and setting a path for the data used in the examples. \n",
-    "from capymoa.stream.stream import stream_from_file\n",
+    "from capymoa.stream import stream_from_file\n",
     "\n",
     "DATA_PATH = \"../data/\"\n",
     "\n",
@@ -88,7 +88,7 @@
    "source": [
     "## Test-then-train loop example\n",
     "from capymoa.evaluation import ClassificationEvaluator\n",
-    "from capymoa.learner.classifier import OnlineBagging\n",
+    "from capymoa.classifier import OnlineBagging\n",
     "\n",
     "# Creating a learner\n",
     "ob_learner = OnlineBagging(schema=elec_stream.get_schema(), ensemble_size=5)\n",
@@ -126,15 +126,17 @@
     "* If our goal is just to evaluate learners it would be tedious to keep writing the **test-then-train loop**. \n",
     "Thus, it makes sense to encapsulate that loop inside **high-level evaluation functions**. \n",
     "\n",
-    "* Furthermore, sometimes we are interested on **cumulative metrics** and sometimes we care about metrics **windowed metrics**. For example, if we want to know how accurate our model is so far, considering all the instances it has seen, then we would look at its cumulative metrics. However, we might also be interested on how well the model is every **n** number of instances, so that we can, for example, identify periods in which our model was really struggling to produce correct predictions. \n",
+    "* Furthermore, sometimes we are interested in **cumulative metrics** and sometimes we care about metrics **windowed metrics**. For example, if we want to know how accurate our model is so far, considering all the instances it has seen, then we would look at its cumulative metrics. However, we might also be interested in how well the model is every **n** number of instances, so that we can, for example, identify periods in which our model was really struggling to produce correct predictions. \n",
     "\n",
-    "* In this example, we use the ```prequential_evaluation``` function, which provides us with both the cumulative and the windowed metrics! If you are only interested on the test-then-train evaluation or the windowed evaluation, there are high-level functions for those as well (see the remarks below). \n",
+    "* In this example, we use the ```prequential_evaluation``` function, which provides us with both the cumulative and the windowed metrics! If you are only interested in the test-then-train evaluation or the windowed evaluation, there are high-level functions for those as well (see the remarks below). \n",
     "\n",
     "* Some remarks:\n",
     "    * If you want to know more about other **high-level evaluation functions**, **evaluators**, or which **metrics** are available, check the complete **Evaluation documentation** in LINK_CAPYMOA_ORG\n",
     "    * The **results** from evaluation functions such as **prequential_evaluation** follow a standard, also discussed thoroughly in the **Evaluation documentation** in LINK_CAPYMOA_ORG\n",
     "    * Sometimes authors refer to the **cumulative** metrics as **test-then-train** metrics, such as **test-then-train accuracy** (or TTT accuracy for short). They all refer to the same concept.\n",
-    "    * Shouldn't we recreate the stream object ```elec_stream```? No, high-level functions automatically ```restart()``` streams"
+    "    * Shouldn't we recreate the stream object ```elec_stream```? No, high-level evaluators automatically ```restart()``` streams when they are reused.\n",
+    "\n",
+    "In the below example ```prequential_evaluation``` is used with ```HoeffdingTree``` classifier on ```elec_stream``` data stream."
    ]
   },
   {
@@ -147,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cumulative accuracy = 75.46566031073446, wall-clock time: 1.198537826538086\n"
+      "Cumulative accuracy = 75.46566031073446, wall-clock time: 1.1470880508422852\n"
      ]
     },
     {
@@ -479,7 +481,7 @@
    "source": [
     "## Test-then-train and windowed evaluation wrapped in prequential evaluation\n",
     "from capymoa.evaluation import prequential_evaluation\n",
-    "from capymoa.learner.classifier import HoeffdingTree\n",
+    "from capymoa.classifier import HoeffdingTree\n",
     "\n",
     "# Create a HoeffdingTree classifier\n",
     "ht = HoeffdingTree(schema=elec_stream.get_schema(), grace_period=50)\n",
@@ -506,7 +508,9 @@
     "\n",
     "* For some of the MOA learners there are corresponding Python objects (such as the HoeffdingTree or Adaptive Random Forest Classifier). However, MOA has over a hundred learners, and more are added constantly.\n",
     "\n",
-    "* To allow advanced users to access **any** MOA learner from CapyMOA, we included the ```MOAClassifier``` and ```MOARegressor``` generic wrappers."
+    "* To allow advanced users to access **any** MOA learner from CapyMOA, we included the ```MOAClassifier``` and ```MOARegressor``` generic wrappers.\n",
+    "\n",
+    "In the below example we use ```kNN``` classifier directly from MOA."
    ]
   },
   {
@@ -519,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cumulative accuracy = 80.32971398305084, wall-clock time: 3.2840349674224854\n"
+      "Cumulative accuracy = 80.32971398305084, wall-clock time: 3.057931900024414\n"
      ]
     },
     {
@@ -850,7 +854,7 @@
    ],
    "source": [
     "from capymoa.evaluation import prequential_evaluation\n",
-    "from capymoa.learner import MOAClassifier\n",
+    "from capymoa.base import MOAClassifier\n",
     "from moa.classifiers.lazy import kNN\n",
     "\n",
     "# Creating a learner\n",
@@ -870,8 +874,9 @@
     "#### 1.2.1 Parameters for generic wrappers\n",
     "\n",
     "* MOA objects can be parametrized using the MOA CLI (Command Line Interface)\n",
-    "* ```moa_learner.CLI_help()``` will present all the options available for the ```moa_learner``` object.\n",
-    "* For example, the code below will show all options for kNN and then create a knn object with ```k=1``` and a window of ```5000``` instances (hyperparameter ```limit```). "
+    "* Sometimes you may not know the relevent parameters for ```moa_learner```,  ```moa_learner.CLI_help()``` presents all the hyperparameters available for the ```moa_learner``` object.\n",
+    "\n",
+    "In the code below, we show all hyperparameters for kNN (in MOA) and then create a knn object with ```k=1``` and a window of ```5000``` instances (hyperparameter ```limit```). "
    ]
   },
   {
@@ -893,7 +898,7 @@
       "-n nearestNeighbourSearch (default: LinearNN)\n",
       "Nearest Neighbour Search to use\n",
       "\n",
-      "Cumulative accuracy = 78.06320621468926, wall-clock time: 8.313624858856201\n"
+      "Cumulative accuracy = 78.06320621468926, wall-clock time: 7.857517957687378\n"
      ]
     }
    ],
@@ -918,8 +923,8 @@
     "### 1.3 Comparing results among classifiers\n",
     "\n",
     "* CapyMOA provides ```plot_windowed_results``` as an easy visualization function for quickly comparing **windowed metrics**\n",
-    "* In the example below, we create three classifiers: HoeffdingAdaptiveTree, OnlineBagging and StreamingRandomPatches.\n",
-    "* More details about ```plot_windowed_results``` options are described in the documentation LINK_CAPYMOA_ORG"
+    "* In the example below, we create three classifiers: HoeffdingAdaptiveTree, HoeffdingTree and AdaptiveRandomForest, and plot the results using ```plot_windowed_results```\n",
+    "* More details about ```plot_windowed_results``` options are described in the documentation: LINK_CAPYMOA_ORG"
    ]
   },
   {
@@ -950,10 +955,10 @@
    ],
    "source": [
     "from capymoa.evaluation.visualization import plot_windowed_results\n",
-    "from capymoa.learner import MOAClassifier\n",
+    "from capymoa.base import MOAClassifier\n",
     "from moa.classifiers.trees import HoeffdingAdaptiveTree\n",
-    "from capymoa.learner.classifier import HoeffdingTree\n",
-    "from capymoa.learner.classifier import AdaptiveRandomForest\n",
+    "from capymoa.classifier import HoeffdingTree\n",
+    "from capymoa.classifier import AdaptiveRandomForest\n",
     "\n",
     "# Create the wrapper for HoeffdingAdaptiveTree (from MOA)\n",
     "HAT = MOAClassifier(schema=elec_stream.get_schema(), moa_learner=HoeffdingAdaptiveTree, CLI=\"-g 50\")\n",
@@ -1005,8 +1010,8 @@
    "source": [
     "## Open a regression dataset\n",
     "from moa.classifiers.trees import FIMTDD\n",
-    "from capymoa.learner.learners import MOARegressor\n",
-    "from capymoa.learner.regressor.regressors import KNNRegressor\n",
+    "from capymoa.base import MOARegressor\n",
+    "from capymoa.regressor import KNNRegressor\n",
     "\n",
     "# Create a learner\n",
     "fimtdd = MOARegressor(schema=fried_stream.get_schema(), moa_learner=FIMTDD())\n",
@@ -1045,12 +1050,14 @@
     "* This example uses the DriftStream building API, precisely the **positional version** where drifts are specified according to their exact location on the stream.\n",
     "* **Integration with the visualization function.** The DriftStream object carries meta-information about the drift which is passed along the stream and thus become available to ```plot_windowed_results```\n",
     "\n",
+    "* The following plot contains two drifts: 1 abrupt and 1 gradual, such that the abrupt drift is located at instance 5000 and the gradual drift starts at instance 9000 and ends at 12000. This information is provided to the stream via ```GradualDrift(start=9000, end=12000)```\n",
+    "\n",
     "* More details concerning Concept Drift in CapyMOA can be found in the documentation: LINK_CAPYMOA_ORG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f7b59e4a-7651-4cff-82c0-bb587917e234",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1080,7 @@
     }
    ],
    "source": [
-    "from capymoa.learner.classifier import OnlineBagging\n",
+    "from capymoa.classifier import OnlineBagging\n",
     "from capymoa.stream.generator import SEA \n",
     "from capymoa.stream.drift import Drift, AbruptDrift, GradualDrift, DriftStream\n",
     "\n",
