--- a/notebooks/01_evaluation.ipynb
+++ b/notebooks/01_evaluation.ipynb
@@ -20,12 +20,12 @@
     " \n",
     "Complete documentation about the examples discussed in here can be found in the documentation: LINK_CAPYMOA_ORG\n",
     "\n",
-    "**last update on 12/04/2024**"
+    "**last update on 18/04/2024**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "d5886daf-0881-4697-8788-5abdc3b30276",
    "metadata": {},
    "outputs": [],
@@ -46,8 +46,8 @@
     "## 1. The difference between Evaluators\n",
     "\n",
     "* The following example implements an **while loop** that updates a ```ClassificationWindowedEvaluator``` and a ```ClassificationEvaluator``` for the same learner. \n",
-    "* The ```ClassificationWindowedEvaluator``` update the metrics according to tumbling windows which 'forgets' old correct and incorrect predictions. This allow us to observe how well the learner performs on shorter windows. \n",
-    "* The ```ClassificationEvaluator``` update the metrics taking into account all the correct and incorrect predictions made. It is useful to observe the overall performance after processing hundreds of thousands of instances.\n",
+    "* The ```ClassificationWindowedEvaluator``` update the metrics according to tumbling windows which 'forgets' old correct and incorrect predictions. This allows us to observe how well the learner performs on shorter windows. \n",
+    "* The ```ClassificationEvaluator``` updates the metrics taking into account all the correct and incorrect predictions made. It is useful to observe the overall performance after processing hundreds of thousands of instances.\n",
     "\n",
     "* **Two important points**:\n",
     "    1. Regarding **window_size** in ```ClassificationEvaluator```: A ```ClassificationEvaluator``` also allow us to specify a window size, but it only controls the frequency at which cumulative metrics are calculated.\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "9b29ce7d-7e76-4741-a728-2bd2e795eb79",
    "metadata": {
     "scrolled": true
@@ -68,12 +68,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa\n",
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa/jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "JAVA_HOME: /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n",
       "[ClassificationWindowedEvaluator] Windowed accuracy reported for every window_size windows\n"
      ]
     },
@@ -185,7 +179,7 @@
    "source": [
     "from capymoa.stream import stream_from_file\n",
     "from capymoa.evaluation import ClassificationWindowedEvaluator, ClassificationEvaluator\n",
-    "from capymoa.learner.classifier import AdaptiveRandomForest\n",
+    "from capymoa.classifier import AdaptiveRandomForest\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_elec_path)\n",
     "\n",
@@ -219,7 +213,7 @@
    "source": [
     "## 2. High-level evaluation functions\n",
     "\n",
-    "In CapyMOA, for supervised learning, there are three primary evaluation functions designed to handle the manipulation of Evaluators. They streamline the process, ensuring users need not directly update them. Essentially, these functions execute the evaluation loop and manage the updating of Evaluators as follows: \n",
+    "In CapyMOA, for supervised learning, there are three primary evaluation functions designed to handle the manipulation of Evaluators. They streamline the process, ensuring users need not directly update them. Essentially, these functions execute the evaluation loop and update the relevant Evaluators:\n",
     "\n",
     "1. ```test_then_train_evaluation()``` -> ```ClassificationEvaluator```\n",
     "2. ```windowed_evaluation()``` -> ```ClassificationWindowedEvaluator```\n",
@@ -257,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "1e10c4e1-8c64-4ac9-9864-1d10a9dadb92",
    "metadata": {},
    "outputs": [
@@ -265,13 +259,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The content of the results dictionary (wallclock = 8.28 seconds): \n",
-      "{'cpu_time': 8.677993,\n",
-      " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator object at 0x1048027f0>,\n",
+      "The content of the results dictionary (wallclock = 6.35 seconds): \n",
+      "{'cpu_time': 7.032704999999993,\n",
+      " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator object at 0x294f44af0>,\n",
       " 'learner': 'AdaptiveRandomForest',\n",
       " 'max_instances': None,\n",
-      " 'stream': <capymoa.stream.stream.NumpyStream object at 0x1047faac0>,\n",
-      " 'wallclock': 8.280642032623291}\n",
+      " 'stream': <capymoa.stream._stream.NumpyStream object at 0x102947340>,\n",
+      " 'wallclock': 6.345656156539917}\n",
       "\n",
       "~~ Cumulative kappa statistic: 74.43350770290526 and Accuracy: 87.5684145480226 ~~\n",
       "\n",
@@ -323,7 +317,7 @@
    "source": [
     "### 2.2 windowed_evaluation()\n",
     "\n",
-    "A ```windowed_evaluation()``` update metrics per windows, which means metrics are reported based on subsets (windows) of instances. Reporting metrics per window allow us to observe how the model was performing in a particular point in time, instead of only observe an overall result. \n",
+    "A ```windowed_evaluation()``` update metrics per windows, which means metrics are reported based on subsets (windows) of instances. Reporting metrics per window allow us to observe how the model was performing in a particular point in time, instead of overall performance. \n",
     "\n",
     "* The Evaluator object present in the results dictionary (key: 'windowed') returned from ```windowed_evaluation()``` is a ```WindowedClassificationEvaluator```\n",
     "* The relevant results are accessible through ```metrics_per_window()``` function. \n",
@@ -333,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "4efa9f75-6cb9-44ad-b751-2c14be06d466",
    "metadata": {},
    "outputs": [
@@ -341,13 +335,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The content of the results dictionary (wallclock = 8.65 seconds): \n",
-      "{'cpu_time': 8.735284999999998,\n",
+      "The content of the results dictionary (wallclock = 6.26 seconds): \n",
+      "{'cpu_time': 6.744022000000001,\n",
       " 'learner': 'AdaptiveRandomForest',\n",
       " 'max_instances': None,\n",
-      " 'stream': <capymoa.stream.stream.NumpyStream object at 0x1047faac0>,\n",
-      " 'wallclock': 8.647826910018921,\n",
-      " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator object at 0x1047fa0a0>}\n"
+      " 'stream': <capymoa.stream._stream.NumpyStream object at 0x102947340>,\n",
+      " 'wallclock': 6.260118246078491,\n",
+      " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator object at 0x2d96d9f10>}\n"
      ]
     },
     {
@@ -716,18 +710,18 @@
    "source": [
     "### 2.3 prequential_evaluation()\n",
     "\n",
-    "A ```prequential_evaluation()``` combines ```windowed_evaluation()``` and ```test_then_train_evaluation```. Internally, it maintainsa ```ClassificationWindowedEvaluator``` and ```ClassificationEvaluator```. This allow us to have access to the **cumulative** and **windowed** results without running two separate evaluation functions. \n",
+    "A ```prequential_evaluation()``` combines ```windowed_evaluation()``` and ```test_then_train_evaluation```. Internally, it maintains a ```ClassificationWindowedEvaluator``` and ```ClassificationEvaluator```. This allows us to have access to the **cumulative** and **windowed** results without running two separate evaluation functions. \n",
     "\n",
-    "* The Evaluators object present in the results dictionary  and 'cumulative') returned from ```prequential_evaluation()``` are a ```ClassificationWindowedEvaluator``` (key: 'windowed') and a ```ClassificationEvaluator``` (key: 'cumulative'). \n",
+    "* The results dictionary returned from ```prequential_evaluation()``` contains Evaluators objects ```ClassificationWindowedEvaluator``` (key: 'windowed') and ```ClassificationEvaluator``` (key: 'cumulative').\n",
     "\n",
-    "* To investigate the ```cumulative``` results, we can access the ```metrics_dictionary```\n",
+    "* ```cumulative``` results can be accessed via ```metrics_dictionary()```\n",
     "  \n",
-    "* Notice that the computational overhead of training and assessing the same model twice outweights the minimum overhead of updating the two Evaluators within the function. Thus in most cases it is advisable to use the ```prequential_evaluation()``` function instead of ```windowed_evaluation()``` and ```test_then_train_evaluation``` separately. "
+    "* Notice that the computational overhead of training and assessing the same model twice outweighs the minimum overhead of updating the two Evaluators within the function. Thus, in most cases it is advisable to use the ```prequential_evaluation()``` function instead of ```windowed_evaluation()``` and ```test_then_train_evaluation``` separately."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "d3e613fc-0e1c-422e-9731-a7ed7637e0a7",
    "metadata": {},
    "outputs": [
@@ -735,16 +729,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The content of the results dictionary (wallclock = 9.06 seconds): \n",
-      "{'cpu_time': 9.338590000000003,\n",
-      " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator object at 0x2d9b64070>,\n",
+      "The content of the results dictionary (wallclock = 6.59 seconds): \n",
+      "{'cpu_time': 7.510519999999985,\n",
+      " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator object at 0x2d96d9100>,\n",
       " 'ground_truth_y': None,\n",
       " 'learner': 'AdaptiveRandomForest',\n",
       " 'max_instances': None,\n",
       " 'predictions': None,\n",
-      " 'stream': <capymoa.stream.stream.NumpyStream object at 0x1047faac0>,\n",
-      " 'wallclock': 9.059311151504517,\n",
-      " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator object at 0x2d8e04310>}\n",
+      " 'stream': <capymoa.stream._stream.NumpyStream object at 0x102947340>,\n",
+      " 'wallclock': 6.5862720012664795,\n",
+      " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator object at 0x10546e1c0>}\n",
       "All the metrics accessible through the Evaluator: \n",
       "\n",
       "{'F1 Score (percent)': 87.23622588506547,\n",
@@ -1124,7 +1118,7 @@
    "source": [
     "from capymoa.evaluation import prequential_evaluation\n",
     "from capymoa.stream import stream_from_file\n",
-    "from capymoa.learner.classifier import OnlineBagging\n",
+    "from capymoa.classifier import OnlineBagging\n",
     "\n",
     "ARF = AdaptiveRandomForest(schema=stream.get_schema(), ensemble_size=10)\n",
     "\n",
@@ -1173,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "960419e2-1cd5-4d93-ba6e-50a74f9b8999",
    "metadata": {
     "scrolled": true
@@ -1224,12 +1218,12 @@
     "\n",
     "* We introduce a simple example using regression just to show how similar it is to assess regressors using the **high-level evaluation functions**\n",
     "* In the example below, we just use ```prequential_evaluation()``` but it would work with ```test_then_train_evaluation()``` and ```windowed_evaluation()``` as well.\n",
-    "* One difference between Classification and Regression evaluation in CapyMOA is that the Evaluators are different. Instead of ```ClassificationEvaluator``` and ```ClassificationWindowedEvaluator``` we should use ```RegressionEvaluator``` and ```RegressionWindowedEvaluator```"
+    "* One difference between Classification and Regression evaluation in CapyMOA is that the Evaluators are different. Instead of ```ClassificationEvaluator``` and ```ClassificationWindowedEvaluator``` functions use ```RegressionEvaluator``` and ```RegressionWindowedEvaluator```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "3f9b6eeb-f5ce-403d-bf95-5d880be1a278",
    "metadata": {},
    "outputs": [
@@ -1255,7 +1249,7 @@
     "from capymoa.evaluation.visualization import plot_windowed_results\n",
     "from capymoa.evaluation import prequential_evaluation\n",
     "from capymoa.stream import stream_from_file\n",
-    "from capymoa.learner.regressor import KNNRegressor, AdaptiveRandomForestRegressor\n",
+    "from capymoa.regressor import KNNRegressor, AdaptiveRandomForestRegressor\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_fried_path, enforce_regression=True)\n",
     "kNN_learner = KNNRegressor(schema=stream.get_schema(), k=5)\n",
@@ -1278,12 +1272,12 @@
    "source": [
     "### 3.1 Evaluating a single stream using multiple learners (Regression)\n",
     "\n",
-    "* Similarly to what we can do with Classification, it is doable to use ```prequential_evaluation_multiple_learners``` for Regression"
+    "* ```prequential_evaluation_multiple_learners``` also works for multiple regressors, the example below shows how it can be used. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "121e54e2-4ba2-41be-8397-408ad40db23d",
    "metadata": {},
    "outputs": [
@@ -1352,14 +1346,14 @@
    "source": [
     "### 3.2 Plotting predictions vs. ground truth over time (Regression)\n",
     "\n",
-    "In Regression it is sometimes desirable to plot **predictions vs. ground truth** to observe what is happening with the Stream. If we create a custom loop and use the Evaluators directly it is trivial to store the ground truth and predictions, and then proceed to plot them. However, to make people's life easier. \n",
+    "* In Regression it is sometimes desirable to plot **predictions vs. ground truth** to observe what is happening with the Stream. If we create a custom loop and use the Evaluators directly it is trivial to store the ground truth and predictions, and then proceed to plot them. However, to make people's life easier ```plot_predictions_vs_ground_truth``` function can be used.\n",
     "\n",
-    "* For massive streams with millions of instances it can be unbearable to plot all at once, thus we can specify a ```plot_interval``` that we want to investigate. By default, the plot function will attempt to plot everything, i.e. if ```plot_interval=None```"
+    "* For massive streams with millions of instances it can be unbearable to plot all at once, thus we can specify a ```plot_interval``` (that we want to investigate) to ```plot_predictions_vs_ground_truth```. By default, the plot function will attempt to plot everything, i.e. if ```plot_interval=None```, which is seldom a good idea. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "f71c8f1b-776d-4204-b485-284aed60af2c",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1371,7 @@
    "source": [
     "from capymoa.evaluation import prequential_evaluation\n",
     "from capymoa.evaluation.visualization import plot_predictions_vs_ground_truth\n",
-    "from capymoa.learner.regressor import KNNRegressor, AdaptiveRandomForestRegressor\n",
+    "from capymoa.regressor import KNNRegressor, AdaptiveRandomForestRegressor\n",
     "\n",
     "stream = stream_from_file(path_to_csv_or_arff=csv_fried_path, enforce_regression=True)\n",
     "kNN_learner = KNNRegressor(schema=stream.get_schema(), k=5)\n",
